# IAMA

./: .gitignore  AI 架構遷移助手深度研究計畫.txt  IAMA 功能白皮書.txt  PROJECT_BLUEPRINT.md  README.md  agent.md  docker-compose.yml  implementation_plan.md.resolved  技術白皮書與開發規劃 v2.0.txt
Docs/: IAMA_PRODUCT_REQUIREMENTS_V1_EN.md  IAMA_PRODUCT_REQUIREMENTS_V1_ZH.md  IAMA_PRODUCT_REQUIREMENTS_V2_EN.md  IAMA_PRODUCT_REQUIREMENTS_V2_ZH.md  README.md
Docs/ADR/: ADR-001-Workflow-Engine.md  ADR-002-LLM-Proxy.md  ADR-003-V2-Sandbox-Execution.md
Docs/DEV/: AGENT_DEVELOPMENT_GUIDE.md  API_CONTRACT.md  DB_SCHEMA.md  DEVELOPMENT_WORKFLOW.md  SERVICE_ARCHITECTURE.md
Docs/UX/: UX-DESIGN-SYSTEM.md  UX-WIREFRAME-IDE.md  UX-WIREFRAME-WEB.md
Docs/plan/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  task.md  task.md.metadata.json  task.md.resolved.0
api/: Dockerfile  package.json  tsconfig.json
api/src/: config.ts  server.ts
backend/: README.md  main.py  pyproject.toml  worker.py
backend/activities/: analysis.py
backend/workflows/: migration_workflow.py
core-engine/: Cargo.toml
core-engine/src/: main.rs
deploy/: docker-compose.dev.yml
extension/: package.json  tsconfig.json
extension/src/: extension.ts
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
migrations/: Dockerfile
migrations/sql/: 0001_users.down.sql  0001_users.up.sql  0002_admin.down.sql  0002_admin.up.sql  0003_subscriptions.down.sql  (+15 more)
temporal-config/: development.yaml
worker/: Dockerfile  config.py  main.py  requirements.txt
(+35 files in other folders)
